<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="nUnderPressureTestErrorCodes_V3" Id="{b4c9533b-015b-4483-a011-589fe4442bd7}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE nUnderPressureTestErrorCodes_V3 :
(
	_860_TestTimeOut := 860,
	_861_SafetyError := 861,
	_864_EjectionValveOpenedDuringTest := 864
	
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>