<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="stUnderPressureTestParams_V3" Id="{3e005304-35b9-43e2-8bbe-ebc525b3a7cb}">
    <Declaration><![CDATA[TYPE stUnderPressureTestParams_V3 :
STRUCT
	rVaccumLevelToObtain						: REAL;							//Vacuum level to obtain
	stVacuumData								: stMeasurementScalingData;		//Measuremnt data
	iAmountOfReCycles							: UINT;							//Amount of recycles of work
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>